--- a/share/jupyterhub/templates/duo.html
+++ b/share/jupyterhub/templates/duo.html
@@ -10,14 +10,16 @@
         <link rel="stylesheet" type="text/css" href={{ static_url("components/duo/css/Duo-Frame.css") }}>
     </head>
     <body>
-      <h1>Duo Authentication Prompt</h1>
       <script src="{{static_url("components/duo/js/Duo-Web-v2.js") }}"></script>
       <iframe id="duo_iframe"
               title="Two-Factor Authentication"
               frameborder="0"
               data-host={{ host }}
               data-sig-request={{ sig_request }}>
-       </iframe>
+      </iframe>
+      <form method="POST" id="duo_form">
+	<input type=hidden name="auth_cache" value={{ auth_cache }} />
+      </form>
     </body>
   </html>
 {% endif %}
